--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemailer-plugin-inline-base64": "^2.0.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "req-flash": "0.0.3",
     "serve-favicon": "~2.3.0"
   }
 }
